falta alguna foto en historia

--- a/historia.html
+++ b/historia.html
@@ -25,6 +25,9 @@
             <li><a href ="#jugadores">Jugadores</a></li>
             <li><a href ="#contacto">Contacto</a></li>
         </ul>
+        <div class="navgihun">
+            <img class="gihun" src="images/gihun.jpeg" width="200" alt="gihun celebrando un gol del madrid">
+        </div>
     </nav>
     <section class="fundacionjugadores">
         <!-- artículo 1: fundación, con párrafos e imágenes -->
