--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
             <li><a href ="#contacto">Contacto</a></li>
             <li><a href="https://www.realmadrid.com/es-ES" target="_blank">Página oficial del club</a></li>
             <li><a href="https://www.transfermarkt.es/real-madrid-cf/startseite/verein/418" target="_blank">Valores de mercado</a></li>
-            <li><a href="https://venues.3ddigitalvenue.com/real-madrid-cf" target="_blank">Mapa interactivo Estadio</a></li>
         </ul>
+        <ul class="estadio">
+            <li class="bernabeu"><a href="https://venues.3ddigitalvenue.com/real-madrid-cf" target="_blank"><img src="images/bernabeu.png" width="200" alt="logo youtube"></a></li>
+        </ul>
+
     </nav>
     <body>
         
