--- a/formulario.html
+++ b/formulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concurso Real Madrid</title>
-    <link rel="stylesheet" href="formulario.css" />
+    <link rel="stylesheet" href="styles/formulario.css" />
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
             <li><a href ="#contacto">Contacto</a></li>
         </ul>
         <div class="navgihun">
-            <img class="gihun" src="images/gihun.jpeg" width="200" alt="gihun celebrando un gol del madrid">
+            <img class="gihun" src="images/freddychampions.png" width="200" alt="freddy fazbear celebrando la champions">
         </div>
     </nav>
     <section>
