--- a/historia.html
+++ b/historia.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia del Real Madrid</title>
-    <link rel="stylesheet" href="historia.css" />
+    <link rel="stylesheet" href="styles/historia.css" />
 </head>
 <body>
     <header>
         <!-- título, logo y frase célebre -->
-        <h1><b>Real Madrid FanPage</b></h1>
+        <h1 class="h1header">Real Madrid FanPage</h1>
             <img src="images/real_madrid_logo.png" width="100" height="150" alt="logo madrid">
-                <br><h2><b><i>Historia que tú hiciste, historia por hacer</i></b></h2></br>
+                <h2 class="h2header">Historia que tú hiciste, historia por hacer</h2>
                     <!-- audio reproduciéndose en bucle -->
                     <audio src="media/madridpiano.mp3" autoplay></audio>
     </header>
@@ -38,7 +38,8 @@
                 <!-- parte 1 -->
         <div class="fundacionprimerosanos">
             <div class="fundacioncaja2">
-                        <img src="images/madridXX.jpg" width="300" height="150" alt="estadio del madrid en el siglo XX">
+                        <img class="madridxx" src="images/madridXX.jpg" width="300" height="150" alt="estadio del madrid en el siglo XX">
+                        <img class="madridxx" src="images/bernabeuxx.jpg" width="300" height="150" alt="estadio del madrid en el siglo XX">
             </div>
             <div class="fundacioncaja1">
                 <h4 class="h1primerosanos">Primeros años</h4>
@@ -63,7 +64,7 @@
                         Ya en temporadas más actuales se pueden ver detalles más elaborados en cuellos y mangas con colores no tan representativos del club como el naranja, producto de su larga y fructifera unión con el gigante alemán de ropa deportiva <b>adidas</b>.</p>
                 </div>
                 <div class="colorescaja2">  
-                        <img src="images/equipaciones.jpg" width="300" height="150" alt="equipaciones del madrid en su historia">
+                        <img src="images/camiseta.png" width="300" alt="equipacion del madrid">
                 </div> 
         </div>
         </article>
