--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Madrid</title>
     <!-- Enlace al archivo css -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
 </head>
 <body>
     <header>
         <!-- título, logo y frase célebre -->
-        <h1><b>Real Madrid FanPage</b></h1>
+        <h1 class="h1header">Real Madrid FanPage</h1>
             <img src="images/real_madrid_logo.png" width="100" height="150" alt="logo madrid">
-                <br><h2><b><i>Historia que tú hiciste, historia por hacer</i></b></h2></br>
+                <h2 class="h2header">Historia que tú hiciste, historia por hacer</h2>
                     <!-- audio reproduciéndose en bucle -->
                     <audio src="media/madridpiano.mp3" autoplay></audio>
     </header>
