--- a/formulario.html
+++ b/formulario.html
@@ -20,8 +20,10 @@
         <ul class="enlaces">
             <li><a href ="index.html" target="_blank">Inicio</a></li>
             <li><a href ="historia.html" target="_blank">Historia del club</a></li>
-            <li><a href ="multimedia.html" target="_blank">Momentos para el recuerdo</a></li>
-            <li><a href ="tabla.html" target="_blank">Estadísticas</a></li>
+            <li><a href ="#informacionbasica">Información Básica</a></li>
+            <li><a href ="#informacionpersonal">Información Personal</a></li>
+            <li><a href ="#informacioncomplementaria">Información Complementaria</a></li>
+            <li><a href ="#enviar">Enviar Formulario</a></li>
             <li><a href ="#contacto">Contacto</a></li>
         </ul>
         <div class="navgihun">
@@ -37,7 +39,7 @@
                     <form>     
                         <fieldset class="informacionpersonal">
                             <!-- dividimos el formulario en cajas según el contenido -->
-                            <legend><b>Información básica</b></legend>
+                            <legend id="informacionbasica"><b>Información Básica</b></legend>
                                 <!-- inputs básicos como text o tel -->
                                 <label for="nombre">Nombre completo:</label>
                                 <input type="text" placeholder="Ej: Javier López" name="nombre" maxlength="35" required><br></br>
@@ -58,7 +60,7 @@
 
                         </fieldset>
                         <fieldset>
-                            <legend><b>Información personal</b></legend>
+                            <legend id="informacionpersonal"><b>Información Personal</b></legend>
                                 <label for="interés">Interés en otros deportes:</label>
                                     <!-- elección múltiple o ninguna -->
                                     <input type="checkbox" name="interés">Baloncesto
@@ -94,7 +96,7 @@
                                     <textarea name="camiseta"></textarea><br><br>
                         </fieldset>
                         <fieldset>
-                            <legend><b>Complementaria</b></legend>
+                            <legend id="informacioncomplementaria"><b>Información Complementaria</b></legend>
                                 <!-- hora y fecha juntas con un solo input -->
                                 <label for="date">Fecha y hora:</label>
                                     <input type="datetime-local" name="date" required><br></br>
@@ -123,7 +125,7 @@
                                     </select>
                         </fieldset>
                         <fieldset>
-                            <legend><b>Enviar formulario</b></legend>
+                            <legend id="enviar"><b>Enviar Formulario</b></legend>
                             <!-- enviar y reestablecer el form -->
                             <label for="submit"></label>
                                 <input type="submit" name="submit" value="Enviar formulario" required>
