--- a/formulario.html
+++ b/formulario.html
@@ -36,7 +36,7 @@
             <p>Rellena este formulario para participar en un sorteo a nivel nacional de una camiseta personalizada del madrid de la temporada 25/26</p>
         </nav>
                 <article>
-                    <form>     
+                    <form>    
                         <fieldset class="informacionpersonal">
                             <!-- dividimos el formulario en cajas según el contenido -->
                             <legend id="informacionbasica"><b>Información Básica</b></legend>
@@ -57,6 +57,7 @@
                                     <input type="radio" name="género">Otro<br></br>
                                 <label for="datos">Acepto el tratamiento de mis datos:</label>
                                     <input type="checkbox" name="datos" required>
+
 
                         </fieldset>
                         <fieldset>
@@ -135,6 +136,9 @@
                 </form>
             </article>
     </section>
+
+
+   
     <!-- contacto con correo, teléfono y enlaces insertados en imágenes -->
    <div class="footercontacto">
         <h3 class="h3footer">Contacto</h3>
@@ -155,5 +159,11 @@
     <div class="footercopy">
         <p class="copy">Copyright© 2025. Designed by BORJU</p>
     </div>
+   <div class="belen"><img class="belenfoto" src="images/belenestebanmadri.jpeg" width="120%" alt="Belén esteban del Madrid"></div>
 </body>
 </html>
+
+
+
+
+
