--- a/historia.html
+++ b/historia.html
@@ -41,7 +41,7 @@
             </div>
             <div class="fundacioncaja1">
                 <h4 class="h1primerosanos">Primeros años</h4>
-                    <p>A finales del <b>siglo XIX</b> surgieron en Madrid los primeros equipos de fútbol, entre ellos <b><i>la Sociedad de Foot-Ball</i></b>, creada en 1897 por antiguos alumnos de la Institución Libre de Enseñanza. Esta sociedad fue el origen del futuro Real Madrid.</p> 
+                    <p>A finales del <b>siglo XIX</b> surgieron en Madrid los primeros equipos de fútbol, entre ellos <b><i>la Sociedad de Foot-Ball</i></b>, creada en 1897 por antiguos alumnos de la Institución Libre de Enseñanza. Esta sociedad fue el origen del futuro Real Madrid.</p>
                     <p>En <b>1900</b>, el grupo se dividió, y existen dos versiones sobre lo que ocurrió:</p>
                         <ol>
                             <li>Que se formaron dos clubes (<b><i>Nueva Sociedad de Foot-Ball</i></b> y <b><i>Sky Foot-Ball</i></b>) que luego se fusionaron en <b>1901</b> para crear el <b><i>Madrid Foot-Ball Club</i></b>.</li>
@@ -52,18 +52,18 @@
             </div>
         </div>
         <div class="fundacioncolores">
-                <!-- parte 2 -->           
+                <!-- parte 2 -->          
                 <div class="colorescaja1">
                 <h4 class="h4fundacioncolores">Colores, y equipación</h4>
                     <p>El origen de la camiseta blanca del <b>Real Madrid</b> se remonta a los primeros años del club, y tiene una explicación sencilla pero simbólica. El color blanco fue elegido en <b>1902</b>, cuando se fundó oficialmente el <b><i>Madrid Foot-Ball Club</i></b>.
-                        Sus fundadores (entre ellos <b>Juan y Carlos Padrós</b>) decidieron que el equipo vistiera de <b>blanco completo</b>, inspirándose en el <b><i>Corinthian Football Club de Londres</i></b>, un prestigioso club amateur inglés de finales del siglo XIX. 
+                        Sus fundadores (entre ellos <b>Juan y Carlos Padrós</b>) decidieron que el equipo vistiera de <b>blanco completo</b>, inspirándose en el <b><i>Corinthian Football Club de Londres</i></b>, un prestigioso club amateur inglés de finales del siglo XIX.
                         El <b><i>Corinthians</i></b> era admirado por su espíritu deportivo, elegancia y juego limpio, valores que los fundadores querían reflejar en el nuevo club madrileño. Por eso adoptaron su uniforme completamente blanco. </p>
-                    <p>Desde entonces el Madrid ha pasado a la historia por su uniforme <b><i>blanco impoluto</i></b>, desde las medias, (que eran negras durante las primeras décadas), hasta los pantalones y la camiseta. A pesar de esto, cada varias temporadas las equipaciones incorporaban ligeros detalles en <b>morado</b> o <b>azul</b> para aportar un poco de variedad. 
+                    <p>Desde entonces el Madrid ha pasado a la historia por su uniforme <b><i>blanco impoluto</i></b>, desde las medias, (que eran negras durante las primeras décadas), hasta los pantalones y la camiseta. A pesar de esto, cada varias temporadas las equipaciones incorporaban ligeros detalles en <b>morado</b> o <b>azul</b> para aportar un poco de variedad.
                         Ya en temporadas más actuales se pueden ver detalles más elaborados en cuellos y mangas con colores no tan representativos del club como el naranja, producto de su larga y fructifera unión con el gigante alemán de ropa deportiva <b>adidas</b>.</p>
                 </div>
                 <div class="colorescaja2">  
                         <img src="images/camiseta.png" width="300" alt="equipacion del madrid">
-                </div> 
+                </div>
         </div>
         </article>
             <!-- artículo 2: jugadores, con párrafos e imágenes -->    
@@ -79,7 +79,7 @@
                         <p>Pasando a figuras más cercanas no podemos olvidar a <b>Cristiano Ronaldo</b>, ganador de <b>5 balones de oro</b> y <b>máximo goleador </b>histórico del <b>Real Madrid</b> con <b>450</b> goles. Su llegada marcó el inicio de una nueva época dorada de gloria europea para el club conquistando 4 <b>Champions</b> más. <b>Zinedine Zidane</b> es uno de los mediocampistas más elegantes y talentosos de este deporte, autor del fantástico gol de la victoria en la final de la Champions League de 2002 y posteriormente ganador de 3 <b>Champions</b> seguidas como entrenador.</p>
                         <p>Finalmente concluimos con dos estrellas modernas del centro del campo del <b>Real Madrid</b>, <b>Luka Modrid</b> y <b>Toni Kroos</b>, estandartes de esta última década en el <i>madridismo</i>, consiguiendo ambos 6 <b>Champions</b>. Además, <b>Modric</b> es el único jugador que pudo ganar el <b>balón de oro</b> durante la época <i>Messi-Cristiano</i>. </p>
                     </div>
-                    <div class="jugadorescaja2">   
+                    <div class="jugadorescaja2">  
                         <img src="images/campeones.jpg" width="300" height="150" alt="Foto de Di Stéfano y Puskas con otros jugadores de la época">
                     </div>
                 </div>
@@ -87,12 +87,12 @@
                 <h4 class="h4iconosblancos">Iconos blancos</h4>
                 <div class="iconosblancos">
                        
-                         <div class="iconoscaja2">   
+                         <div class="iconoscaja2">  
                             <img src="images/modrickroos.jpg" width="300" height="150" alt="modric y kroos con un título">
                         </div>
                         <div class="iconoscaja1">
                             <p>A pesar de que hemos mencionado probablemente a los mejores jugadores del <b>Madrid</b>, en la historia del club hay espacio para grandes jugadores también que se convirtieron en ídolos absolutos de la afición, ya sea por su carácter, como <b>Dani Carvajal</b>, leyenda moderna del lateral derecho blanco, <b>Raúl</b> eterno capitán y delantero de área como pocos, uno de los jugadores más atemporales que ha tenido la <i>entidad merengue</i>, <b>Iker Casillas</b>, considerado por muchos uno de los mejores porteros de la historia y vital en la era dorada de la <b>Selección Española</b>, <b>Sergio Ramos</b>, leyenda absoluta por su temperamento, caracter, esfuerzo y por ser uno de los defensas más goleadores de la historia, y Képler Laverán Lima Ferreira, o <b>Pepe</b>, para los amigos. Jugador de culto que se seguirá recordando por sus famosas <i>idas de olla</i> que encendían al Bernabeu. </p>
-                        </div> 
+                        </div>
                 </div>
             </article>
     </section>
@@ -116,5 +116,6 @@
     <div class="footercopy">
         <p class="copy">Copyright© 2025. Designed by BORJU</p>
     </div>
+    <div class="belen"><img class="belenfoto" src="images/belenestebanmadri.jpeg" width="120%" alt="Belén esteban del Madrid"></div>
 </body>
 </html>
