--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         <div class="enlacesdeinteres">
         <h3 class="asidetitulos">Enlaces de Interés</h3>
         <ul>
-            <li><a href="https://www.realmadrid.com" target="_blank">Sitio oficial del Real Madrid</a></li>
-            <li><a href="https://www.laliga.com" target="_blank">LaLiga</a></li>
-            <li><a href="https://es.uefa.com/" target="_blank">UEFA</a></li>
+            <li class="listasenlaces"><a href="https://www.realmadrid.com" target="_blank">Sitio oficial del Real Madrid</a></li>
+            <li class="listasenlaces"><a href="https://www.laliga.com" target="_blank">LaLiga</a></li>
+            <li class="listasenlaces"><a href="https://es.uefa.com/" target="_blank">UEFA</a></li>
         </ul>
         </div>
 
@@ -158,6 +158,6 @@
     <div class="footercopy">
         <p class="copy">Copyright© 2025. Designed by BORJU</p>
     </div>
-
+    <div class="belen"><img class="belenfoto" src="images/belenestebanmadri.jpeg" width="120%" alt="Belén esteban del Madrid"></div>
 </body>
 </html>
